# QT

./: README.md
Exercise28/: CMakeLists.txt  dialog.cpp  dialog.h  run
